[package]
name = "herstory"
version = "0.1.0"
authors = ["Dennis Collective <dennis.collective@gmail.com>"]

[dependencies]
curl = "0.4.8"
error-chain = "0.11.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[lib]
name = "herstory"
crate-type = ["dylib"] # could be `staticlib` as well
path = "src/lib.rs"
